--- a/package.json
+++ b/package.json
@@ -1,9 +1,33 @@
 {
   "name": "@nestjs-microservice-boilerplate/source",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "NestJS microservice boilerplate",
+  "author": "Lý Tại Trường",
   "license": "MIT",
-  "scripts": {},
   "private": true,
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lytaitruong/nestjs-microservice-boilerplate.git"
+  },
+  "keywords": [
+    "nestjs-microservice",
+    "nestjs-boilerplate",
+    "nestjs-template"
+  ],
+  "scripts": {
+    "build:user-api": "nx build user-api",
+    "serve:user-api": "nx serve user-api",
+    "lint:user-api": "nx lint user-api",
+    "test:user-api": "nx test user-api",
+    "e2e:user-api": "nx e2e user-api-e2e",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "commit": "cz",
+    "lint-staged": "lint-staged",
+    "prepare": "husky install",
+    "release": "standard-version --no-verify"
+  },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -14,6 +38,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "17.0.3",
@@ -30,14 +56,43 @@
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "bun-types": "^1.0.9",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "lint-staged": "^15.0.2",
     "nx": "17.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && bun run build",
+      "prepare-commit-msg": "exec < /dev/tty && bun cz --hook || true"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "bun nx format:write --uncommitted"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "engines": {
+    "node": ">= 18",
+    "nest": ">= 10",
+    "pnpm": ">= 8",
+    "prisma": ">= 5",
+    "fastify": ">= 4"
   }
 }
