feat(issue): build issues template for anyone who interesting can be request and report

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,5 @@
 {
-  "cSpell.words": [
-    "Buildable",
-    "commitlint",
-    "Parens"
-  ],
+  "cSpell.words": ["Buildable", "commitlint", "Parens"],
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
   },
