--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "nestjs-template"
   ],
   "scripts": {
+    "build": "nx run-many --target=build -all",
+    "serve": "nx run-many --target=serve -all",
+    "generate": "nx run-many --target=generate -all",
     "build:user-api": "nx build user-api",
     "serve:user-api": "nx serve user-api",
-    "lint:user-api": "nx lint user-api",
     "test:user-api": "nx test user-api",
     "e2e:user-api": "nx e2e user-api-e2e",
+    "generate-db:user": "bun prisma generate --schema libs/prisma-user/prisma/schema.prisma",
+    "create-db:user-": "bun prisma migrate dev --schema libs/prisma-user/prisma/schema.prisma",
+    "deploy-db:user": "bun prisma migrate deploy --schema libs/prisma-user/prisma/schema.prisma",
+    "studio-db:user": "bun prisma studio --schema libs/prisma-user/prisma/schema.prisma",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "commit": "cz",
@@ -29,9 +35,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^5.5.2",
     "axios": "^1.0.0",
+    "prisma": "^5.5.2",
+    "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -88,10 +98,13 @@
     }
   },
   "engines": {
+    "bun": ">= 1.0",
     "node": ">= 18",
     "nest": ">= 10",
-    "pnpm": ">= 8",
+    "jest": ">= 29",
     "prisma": ">= 5",
-    "fastify": ">= 4"
+    "fastify": ">= 4",
+    "typescript": ">= 5",
+    "postgresql": ">= 16"
   }
 }
