feat(common): logger and common useful for microservice nestjs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["Buildable", "commitlint", "Parens"],
+  "cSpell.words": ["Buildable", "commitlint", "DDTHH", "gstatic", "jsdelivr", "Parens"],
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
   },
