--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
   "scripts": {
     "build": "nx run-many --target=build -all",
     "serve": "nx run-many --target=serve -all",
+    "test": "nx run-many --target=test -all",
     "generate": "nx run-many --target=generate -all",
     "build:user-api": "nx build user-api",
     "serve:user-api": "nx serve user-api",
     "test:user-api": "nx test user-api",
     "e2e:user-api": "nx e2e user-api-e2e",
-    "generate-db:user": "bun prisma generate --schema libs/prisma-user/prisma/schema.prisma",
-    "create-db:user-": "bun prisma migrate dev --schema libs/prisma-user/prisma/schema.prisma",
-    "deploy-db:user": "bun prisma migrate deploy --schema libs/prisma-user/prisma/schema.prisma",
-    "studio-db:user": "bun prisma studio --schema libs/prisma-user/prisma/schema.prisma",
+    "generate:user-data": "bun prisma generate --schema libs/prisma-user/prisma/schema.prisma",
+    "create:user-data": "bun prisma migrate dev --schema libs/prisma-user/prisma/schema.prisma",
+    "deploy:user-data": "bun prisma migrate deploy --schema libs/prisma-user/prisma/schema.prisma",
+    "studio:user-data": "bun prisma studio --schema libs/prisma-user/prisma/schema.prisma",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "commit": "cz",
@@ -34,12 +35,23 @@
     "release": "standard-version --no-verify"
   },
   "dependencies": {
+    "@fastify/compress": "^6.5.0",
+    "@fastify/cookie": "^9.1.0",
+    "@fastify/csrf-protection": "^6.4.0",
+    "@fastify/helmet": "^11.1.1",
+    "@fastify/multipart": "^8.0.0",
+    "@fastify/static": "^6.12.0",
+    "@fastify/swagger": "^8.12.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-fastify": "^10.2.8",
+    "@nestjs/swagger": "^7.1.14",
     "@prisma/client": "^5.5.2",
     "axios": "^1.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "prisma": "^5.5.2",
     "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.1.13",
