--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@libs/common": ["libs/common/src/index.ts"],
       "@libs/prisma-user": ["libs/prisma-user/src/index.ts"],
       "@libs/types": ["libs/types/src/index.ts"]
     }
