--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "lodash": "^4.17.21",
     "prisma": "^5.5.2",
     "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.1.13",
@@ -74,6 +75,7 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.200",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
