--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,10 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@libs/base": ["libs/common/src/index.ts"],
+      "@libs/base": ["libs/base/src/index.ts"],
+      "@libs/types": ["libs/types/src/index.ts"],
+      "@libs/guard": ["libs/guard/src/index.ts"],
       "@libs/common": ["libs/common/src/index.ts"],
-      "@libs/prisma-user": ["libs/prisma-user/src/index.ts"],
-      "@libs/types": ["libs/types/src/index.ts"]
+      "@libs/prisma-user": ["libs/prisma-user/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
