--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-fastify": "^10.2.8",
     "@nestjs/swagger": "^7.1.14",
@@ -52,7 +54,10 @@
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "fastify": "^4.24.3",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.5.2",
     "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.1.13",
@@ -75,8 +80,10 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.200",
     "@types/node": "~18.7.1",
+    "@types/passport-jwt": "^3.0.13",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "bun-types": "^1.0.9",
