--- a/libs/common/tsconfig.json
+++ b/libs/common/tsconfig.json
@@ -3,11 +3,9 @@
   "compilerOptions": {
     "module": "commonjs",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "strictPropertyInitialization": false
+    "noFallthroughCasesInSwitch": true
   },
   "files": [],
   "include": [],
