feat(docker): add docker file and docker-compose to run server

--- a/apps/user-api/project.json
+++ b/apps/user-api/project.json
@@ -15,6 +15,7 @@
         "main": "apps/user-api/src/main.ts",
         "tsConfig": "apps/user-api/tsconfig.app.json",
         "isolatedConfig": true,
+        "generatePackageJson": true,
         "webpackConfig": "apps/user-api/webpack.config.js"
       },
       "configurations": {
