--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     build:
       context: .
       dockerfile: ./apps/user-api/Dockerfile
-    env_file: .env
+    env_file: ./apps/user-api/.env
     networks:
       - nestjs-microservice-api
       - nestjs-microservice-user-postgresql
@@ -27,7 +27,7 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_USER_DATABASE}
+      POSTGRES_DB: ${POSTGRES_DATABASE_USER}
     networks:
       - nestjs-microservice-user-postgresql
     volumes:
