feat(apps): build book micro-service

--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "test": "nx run-many --target=test -all",
     "generate": "nx run-many --target=generate -all",
     "build:user-api": "nx build user-api",
+    "build:book-api": "nx build book-api",
     "serve:user-api": "nx serve user-api",
+    "serve:book-api": "nx serve book-api",
     "test:user-api": "nx test user-api",
+    "test:book-api": "nx test book-api",
     "test:user-e2e": "nx e2e user-e2e",
+    "test:book-e2e": "nx e2e book-e2e",
     "generate:user-data": "npx prisma generate --schema libs/prisma-user/prisma/schema.prisma",
     "create:user-data": "npx prisma migrate dev --schema libs/prisma-user/prisma/schema.prisma",
     "deploy:user-data": "npx prisma migrate deploy --schema libs/prisma-user/prisma/schema.prisma",
