feat(database): setup book postgresql database using prisma v5

--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "test:user-e2e": "nx e2e user-e2e",
     "test:book-e2e": "nx e2e book-e2e",
     "generate:user-data": "npx prisma generate --schema libs/prisma-user/prisma/schema.prisma",
+    "generate:book-data": "npx prisma generate --schema libs/prisma-book/prisma/schema.prisma",
     "create:user-data": "npx prisma migrate dev --schema libs/prisma-user/prisma/schema.prisma",
+    "create:book-data": "npx prisma migrate dev --schema libs/prisma-book/prisma/schema.prisma",
     "deploy:user-data": "npx prisma migrate deploy --schema libs/prisma-user/prisma/schema.prisma",
+    "deploy:book-data": "npx prisma migrate deploy --schema libs/prisma-book/prisma/schema.prisma",
     "studio:user-data": "npx prisma studio --schema libs/prisma-user/prisma/schema.prisma",
+    "studio:book-data": "npx prisma studio --schema libs/prisma-book/prisma/schema.prisma",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "commit": "cz",
