--- a/apps/book-api/.env.example
+++ b/apps/book-api/.env.example
@@ -1,5 +1,5 @@
 ## connection_limit: default CPU n core * 2 + 1 (my computer is Mac m1 8 core => 8 * 2 + 1 = 17 connections)
-DATABASE_URL_USER=
+DATABASE_URL_BOOK=
 
 APP_PORT=
 APP_VERSION=
