feat(cicd): github actions using nx affected to get services has been affected on PR

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ POSTGRES_PASSWORD=
 POSTGRES_DATABASE_USER=
 POSTGRES_DATABASE_BOOK=
 
+DATABASE_URL_BOOK=
+DATABASE_URL_USER=
+
 IOREDIS_ENABLE=
 IOREDIS_HOST=
 IOREDIS_PORT=
